<resources>
    <string name="app_name">RemindMe</string>
    <string name="welcome_to_remindme">WELCOME TO REMINDME</string>
    <string name="logo">LOGO</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_new_task">add_new_task</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="enter_task_here">Enter Task here..</string>
    <string name="due_date">Due date</string>
    <string-array name="repeat">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string name="desc">Task description</string>
    <string name="project">Project</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_date">SELECT DATE</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="imgUserProfile">Profile Photo</string>
    <string name="snooze">Snooze</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="delete_icon">delete_icon</string>
    <string name="dayNightMode">dayNightMode</string>
    <string name="calendar">Calendar</string>
    <string name="note">Note</string>
    <string name="create_a_new_project">Create a new project</string>
    <string name="datereated">dateCreated</string>
    <string name="last_modified">Last Modified:</string>
    <string name="task">Task</string>
    <string name="cancel">cancel</string>
    <string name="all_tasks">All tasks</string>
    <string name="tasks">Tasks</string>
    <string name="disconnect">Disconnect</string>
</resources>