<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
            <item android:id="@+id/menu_upcoming" android:title="@string/all_tasks" android:icon="@drawable/ic_upcoming"/>
            <item android:id="@+id/menu_completed" android:title="@string/completed" android:icon="@drawable/ic_achievement"/>
        </group>
        <group android:id="@+id/menu_bottom"
            android:checkableBehavior="single">
            <item android:id="@+id/menu_project" android:title="@string/project" android:icon="@drawable/ic_project"/>
            <item android:id="@+id/menu_logout" android:title="@string/logout" android:icon="@drawable/ic_logout"/>
            <item android:id="@+id/menu_disconnect" android:title="@string/disconnect" android:icon="@drawable/ic_disconnect"/>
        </group>
</menu>