<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:id="@+id/card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toEndOf="@id/imageView"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="#a9a9a9"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="8dp"
            android:layout_below="@id/textTask"/>

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTask"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/textDate"
            android:text="@string/time"
            android:textColor="#a9a9a9"
            android:textSize="15sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textSize="15sp"
            android:textColor="#a9a9a9"
            android:layout_toEndOf="@id/textTime"
            android:layout_marginStart="8dp"
            android:layout_below="@id/textTask"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="15sp"
            android:textColor="#a9a9a9"
            android:layout_toEndOf="@id/textRepeat"
            android:layout_marginStart="8dp"
            android:layout_below="@id/textTask"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/delete_icon" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>