<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="4dp"
    android:id="@+id/note_card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="8dp">

        <TextView
            android:id="@+id/textNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="9dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textNoteText"
            android:layout_width="104dp"
            android:layout_height="90dp"
            android:layout_below="@+id/textNoteTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:ellipsize="end"
            android:text="@string/note"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNoteText"
            android:layout_marginStart="8dp"
            android:text="@string/last_modified"
            android:textColor="@color/colorSubText"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/dateModified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNoteText"
            android:layout_toEndOf="@id/lblDate"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            android:textColor="@color/colorSubText"
            android:textSize="12sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>