<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/cons"
    tools:context=".SnoozeAlarm">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/task"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/btnSnooze"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#A9A9A9"
        android:text="@string/snooze"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#A9A9A9"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

</androidx.constraintlayout.widget.ConstraintLayout>