<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".UpdateTask">

    <TextView
        android:id="@+id/lblTaskName"
        android:layout_width="338dp"
        android:layout_height="41dp"
        android:text="@string/what_is_to_be_done"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enter_task_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTaskName"
        app:layout_constraintVertical_bias="0.0"
        app:errorEnabled="true"/>

    <TextView
        android:id="@+id/lbldate"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:text="@string/due_date"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/in_date"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:autofillHints=""
        android:editable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskName"
        app:layout_constraintVertical_bias="0.104"
        app:errorEnabled="true"/>

    <TextView
        android:id="@+id/lbltime"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:text="@string/time"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <EditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:editable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_date"
        app:layout_constraintVertical_bias="0.121"
        app:errorEnabled="true"/>

    <TextView
        android:id="@+id/lblspinner"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:text="@string/repeat"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="344dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/lbldesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblspinner"
        app:layout_constraintVertical_bias="0.0"
        app:errorEnabled="true"/>

    <TextView
        android:id="@+id/lbldesc"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:text="@string/desc"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <EditText
        android:id="@+id/txtdesc"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTaskName"
        app:layout_constraintVertical_bias="0.733"
        app:errorEnabled="true"/>

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:text="@string/select_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toEndOf="@+id/in_date"
        android:text="@string/select_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskName"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/mineshaft"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_time"
        app:layout_constraintVertical_bias="0.782" />

</androidx.constraintlayout.widget.ConstraintLayout>